--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -11,8 +11,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="assets/css/glyphicons.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="assets/styles/home_page.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="/assets/css/glyphicons.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="/assets/styles/home_page.css" type="text/css" media="screen" />
     {% if page.header_include %}
       {% include {{ page.header_include }} %}
     {% endif %}
@@ -30,7 +30,7 @@
         app_id: "ij9ujbo5"
       };
     </script>
-    <script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/ij9ujbo5';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
+    <script src="/assets/intercom.js"></script>
   </head>
 
   <body class="amdrnt-site" data-spy="scroll" data-target=".navbar" data-offset="60">
