--- a/_includes/thanks_css.html
+++ b/_includes/thanks_css.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" href="assets/styles/thanks.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="/assets/styles/thanks.css" type="text/css" media="screen" />
